--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,15 +16,27 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation "androidx.work:work-runtime:2.0.1"
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha1'
+    implementation "androidx.work:work-runtime:2.1.0-alpha02"
+    implementation 'com.google.android.material:material:1.1.0-alpha06'
+    implementation ("com.google.android.gms:play-services-location:16.0.0") {
+        exclude group: 'com.android.support'
+    }
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+//    implementation 'com.google.firebase:firebase-core:16.0.9'
+//    implementation 'com.google.firebase:firebase-auth:17.0.0'
+//    implementation 'com.google.firebase:firebase-firestore:19.0.0'
 }
