--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 28
@@ -16,27 +18,35 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility = '1.8'
-        targetCompatibility = '1.8'
-    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha1'
-    implementation "androidx.work:work-runtime:2.1.0-alpha02"
+    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
+    implementation 'androidx.work:work-runtime:2.1.0-alpha02'
+
     implementation 'com.google.android.material:material:1.1.0-alpha06'
-    implementation ("com.google.android.gms:play-services-location:16.0.0") {
-        exclude group: 'com.android.support'
+    implementation ('com.google.android.gms:play-services-location:16.0.0') {
+        exclude group: 'com.android.support', module: 'support-v4'
     }
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-//    implementation 'com.google.firebase:firebase-core:16.0.9'
-//    implementation 'com.google.firebase:firebase-auth:17.0.0'
-//    implementation 'com.google.firebase:firebase-firestore:19.0.0'
+    implementation ('com.google.firebase:firebase-core:16.0.9') {
+        exclude group: 'com.android.support', module: 'support-v4'
+    }
+    implementation ('com.google.firebase:firebase-auth:17.0.0') {
+        exclude group: 'com.android.support', module: 'support-v4'
+    }
+    implementation ('com.google.firebase:firebase-firestore:19.0.1') {
+        exclude group: 'com.android.support', module: 'support-v4'
+    }
 }
+
+apply plugin: 'com.google.gms.google-services'
