--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,14 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
 
         applicationId "com.exelor.laytrax"
-        minSdkVersion 23
-        targetSdkVersion 28
-        versionCode 4
-        versionName "1.0.0"
+        minSdkVersion 26
+        targetSdkVersion 29
+        versionCode 1
+        versionName "1.1.0-alpha1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -27,11 +27,11 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
-    implementation 'androidx.work:work-runtime:2.3.0-alpha03'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
+    implementation 'androidx.work:work-runtime:2.3.0-rc01'
 
-    implementation 'com.google.android.material:material:1.2.0-alpha01'
-    implementation ('com.google.android.gms:play-services-location:16.0.0') {
+    implementation 'com.google.android.material:material:1.2.0-alpha04'
+    implementation ('com.google.android.gms:play-services-location:17.0.0') {
         exclude group: 'com.android.support', module: 'support-v4'
     }
 
@@ -48,6 +48,13 @@ dependencies {
     implementation ('com.google.firebase:firebase-firestore:19.0.1') {
         exclude group: 'com.android.support', module: 'support-v4'
     }
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta01'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
+
+// Apply the Crashlytics Gradle plugin
+apply plugin: 'com.google.firebase.crashlytics'
